# classic-computer-science-problems-in-haskell

./: LICENSE  README.md
chapter1/: CHANGELOG.md  CalculatePi.hs  CompressedGene.hs  Fib1.hs  Fib2.hs  Fib3.hs  Fib4.hs  Fib5.hs  Fib6.hs  Hanoi.hs  TrivialCompression.hs  UnbreakableEncryption.hs  chapter1.cabal
chapter2/: DnaSearch.hs  Maze.hs  Missionaries.hs  chapter2.cabal
chapter2/lib/: GenericSearch.hs  UnitSpec.hs
chapter3/: Main.hs  MapColoring.hs  Queens.hs  SendMoreMoney.hs  WordSearch.hs  chapter3.cabal
chapter3/lib/: CSP.hs  scrap.txt
chapter4/: Dijkstra.hs  Main.hs  Mst.hs  chapter4.cabal
chapter4/lib/: Graph.hs  PriorityQueue.hs  UnitSpec.hs
chapter5/: ListCompression.hs  SendMoreMoney.hs  SimpleEquation.hs  chapter5.cabal
chapter5/lib/: GeneticAlgorithm.hs
chapter6/: Albums.hs  Governors.hs  chapter6.cabal
chapter6/lib/: KMeans.hs
chapter7/: Iris.hs  Wine.hs  chapter7.cabal
chapter7/lib/: Layer.hs  NeuralNetwork.hs  Neuron.hs  UnitSpec.hs  Utils.hs
chapter8/: ConnectFour.hs  ConnectFourAI.hs  TTTUnitSpec.hs  TicTacToe.hs  TicTacToeAI.hs  chapter8.cabal
chapter8/lib/: Board.hs  MiniMax.hs
chapter9/: Knapsack.hs  chapter9.cabal
