cabal-version:      2.0
name:               chapter1
version:            0.1.0.0
synopsis:           Port of chapter 1 of 'Classic Computer Science Problems' to Haskell
description:        An attempt at porting the source code of the books Classic Computer Science Problems in Python and Classic Computer Science Problems in Java by David Kopec to Hasell
homepage:           https://github.com/marpetercontribs/classic-computer-science-problems-in-haskell

license:            Apache-2.0
license-file:       ../LICENSE
author:             Markus Peter
maintainer:         marpeter@web.de
copyright:          (c) 2025 by Markus Peter
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

executable fib1
    main-is:          Fib1.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   .
    default-language: Haskell2010

executable fib2
    main-is:          Fib2.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   .
    default-language: Haskell2010

executable fib3
    main-is:          Fib3.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   .
    default-language: Haskell2010

executable fib4
    main-is:          Fib4.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, memoize ^>=1.1.2
    hs-source-dirs:   .
    default-language: Haskell2010

executable fib5
    main-is:          Fib5.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   .
    default-language: Haskell2010