cabal-version:      2.0
name:               chapter1
version:            0.1.0.0
synopsis:           Port of chapter 1 of 'Classic Computer Science Problems' to Haskell
description:        An attempt at porting the source code of the books Classic Computer Science Problems in Python and Classic Computer Science Problems in Java by David Kopec to Hasell
homepage:           https://github.com/marpetercontribs/classic-computer-science-problems-in-haskell

license:            Apache-2.0
license-file:       ../LICENSE
author:             Markus Peter
maintainer:         marpeter@web.de
copyright:          (c) 2025 by Markus Peter
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

executable fib1
    main-is:          Fib1.hs
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   .
    default-language: Haskell2010

executable fib2
    main-is:          Fib2.hs
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   .
    default-language: Haskell2010

executable fib3
    main-is:          Fib3.hs
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   .
    default-language: Haskell2010

executable fib4
    main-is:          Fib4.hs
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, memoize ^>=1.1.2
    hs-source-dirs:   .
    default-language: Haskell2010

executable fib5
    main-is:          Fib5.hs
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   .
    default-language: Haskell2010

executable fib6
    main-is:          Fib6.hs
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   .
    default-language: Haskell2010

executable trivialCompression
    main-is:          TrivialCompression.hs
    other-modules:    CompressedGene
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      -- needed by main to calculate the size of the data structures:
                      deepseq ^>= 1.4.8.0, ghc-datasize ^>= 0.2.7
    hs-source-dirs:   .
    default-language: Haskell2010