cabal-version:      2.0
name:               chapter2
version:            0.1.0.0
synopsis:           Port of chapter 2 of 'Classic Computer Science Problems' to Haskell
description:        An attempt at porting the source code of the books Classic Computer Science Problems in Python and Classic Computer Science Problems in Java by David Kopec to Haskell
homepage:           https://github.com/marpetercontribs/classic-computer-science-problems-in-haskell

license:            Apache
license-file:       ../LICENSE
author:             Markus Peter
maintainer:         marpeter@web.de
copyright:          (c) 2025 by Markus Peter
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

library
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   lib
    exposed-modules:  GenericSearch
    default-language: Haskell2010

test-suite test-genericSearch
    type:             exitcode-stdio-1.0
    main-is:          UnitSpec.hs
    other-modules:    GenericSearch
    hs-source-dirs:   lib
    build-depends:    base ^>=4.17.2.1, HUnit >= 1.6
    default-language: Haskell2010

executable dnaSearch
    main-is:          DnaSearch.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   .
    default-language: Haskell2010
