cabal-version:      2.0
name:               chapter4
version:            0.1.0.0
synopsis:           Port of chapter 4 of 'Classic Computer Science Problems' to Haskell
description:        An attempt at porting the source code of the books Classic Computer Science Problems in Python and Classic Computer Science Problems in Java by David Kopec to Haskell
homepage:           https://github.com/marpetercontribs/classic-computer-science-problems-in-haskell
license:            Apache-2.0
license-file:       ../LICENSE
author:             Markus Peter
maintainer:         marpeter@web.de
copyright:          (c) 2026 by Markus Peter
build-type:         Simple

library
    build-depends:    base >=4.22.0.0
    hs-source-dirs:   lib
    exposed-modules:  Graph, PriorityQueue
    default-language: Haskell2010

test-suite test-graph
    type:             exitcode-stdio-1.0
    main-is:          UnitSpec.hs
    other-modules:    Graph, PriorityQueue, GenericSearch
    hs-source-dirs:   lib, ../chapter2/lib
    build-depends:    base ^>=4.22.0.0, HUnit >= 1.6
    default-language: Haskell2010

executable mst
    main-is:          Mst.hs
    other-modules:    Graph, PriorityQueue, GenericSearch
    build-depends:    base ^>=4.22.0.0
    hs-source-dirs:   ., lib, ../chapter2/lib
    default-language: Haskell2010

executable dijkstra
    main-is:          Dijkstra.hs
    other-modules:    Graph, PriorityQueue
    build-depends:    base ^>=4.22.0.0, containers
    hs-source-dirs:   ., lib, ../chapter2/lib
    default-language: Haskell2010