cabal-version:      2.0
name:               chapter6
version:            0.1.0.0
synopsis:           Port of chapter 6 of 'Classic Computer Science Problems' to Haskell
description:        An attempt at porting the source code of the books Classic Computer Science Problems in Python and Classic Computer Science Problems in Java by David Kopec to Haskell
homepage:           https://github.com/marpetercontribs/classic-computer-science-problems-in-haskell
license:            Apache-2.0
license-file:       ../LICENSE
author:             Markus Peter
maintainer:         marpeter@web.de
copyright:          (c) 2026 by Markus Peter
build-type:         Simple

library
    build-depends:    base >=4.22.0.0, random >=1.2.0
    hs-source-dirs:   lib
    exposed-modules:  KMeans
    default-language: Haskell2010

executable governors
    main-is:          Governors.hs
    other-modules:    KMeans
    build-depends:    base ^>=4.22.0.0, random >=1.2.0
    hs-source-dirs:   ., lib
    default-language: Haskell2010

executable albums
    main-is:          Albums.hs
    other-modules:    KMeans
    build-depends:    base ^>=4.22.0.0, random >=1.2.0
    hs-source-dirs:   ., lib
    default-language: Haskell2010
