cabal-version:      2.0
name:               chapter8
version:            0.1.0.0
synopsis:           Port of chapter 8 of 'Classic Computer Science Problems' to Haskell
description:        An attempt at porting the source code of the books Classic Computer Science Problems in Python and Classic Computer Science Problems in Java by David Kopec to Haskell
homepage:           https://github.com/marpetercontribs/classic-computer-science-problems-in-haskell
license:            Apache-2.0
license-file:       ../LICENSE
author:             Markus Peter
maintainer:         marpeter@web.de
copyright:          (c) 2026 by Markus Peter
build-type:         Simple

library
    build-depends:    base >=4.22.0.0
    hs-source-dirs:   lib
    exposed-modules:  MiniMax
    default-language: Haskell2010


test-suite test-tictactoe
    type:             exitcode-stdio-1.0
    main-is:          TTTUnitSpec.hs
    other-modules:    TicTacToe, MiniMax, Board
    hs-source-dirs:   ., lib
    build-depends:    base >=4.17.2.1, HUnit >= 1.6
    default-language: Haskell2010

executable tictactoe
    main-is:          TicTacToeAI.hs
    other-modules:    TicTacToe,MiniMax, Board
    build-depends:    base ^>=4.22.0.0
    hs-source-dirs:   ., lib
    default-language: Haskell2010
