cabal-version:      2.0
name:               chapter9
version:            0.1.0.0
synopsis:           Port of chapter 9 of 'Classic Computer Science Problems' to Haskell
description:        An attempt at porting the source code of the books Classic Computer Science Problems in Python and Classic Computer Science Problems in Java by David Kopec to Haskell
homepage:           https://github.com/marpetercontribs/classic-computer-science-problems-in-haskell
license:            Apache-2.0
license-file:       ../LICENSE
author:             Markus Peter
maintainer:         marpeter@web.de
copyright:          (c) 2026 by Markus Peter
build-type:         Simple

executable knapsack
    main-is:          Knapsack.hs
    build-depends:    base ^>=4.22.0.0
    hs-source-dirs:   .
    default-language: Haskell2010